# jiji

./: .gitignore  CMakeLists.txt  build_debug.bat  build_release.bat  generate_msvc2019.bat  timeit.bat
.github/workflows/: build-lili-debug.yml  build-lili-release.yml
cmake/: common.cmake
demo-template/: CMakeLists.txt  build_ship.bat  open_solution.bat
demo-template/source/: CMakeLists.txt  main.cpp  main.cxx
jiji/source/: CMakeLists.txt
jiji/source/jiji/: _precompiled.hpp  _prelude-no-logging.ixx  _prelude.hxx  _prelude.ixx  jiji.ixx
jiji/source/jiji/base/: _export.base.ixx  noncopyable.ixx
jiji/source/jiji/core/: Config.ixx  Core.ixx  EngineCore.ixx  _export.core.ixx  _export.ixx  _public.ixx
jiji/source/jiji/core/logging/: LogHandle.cxx  LogHandle.ixx  LogTarget.ixx  Logger.cxx  Logger.ixx  LoggerOperations.ixx  Message.ixx  impl.cxx  impl.ixx  logging.cxx  logging.hxx  logging.ixx  macros.hxx  operations.ixx  routines.ixx
jiji/source/jiji/core/logging/sinks/: DebuggerLogSink.ixx  LogSink.ixx
jiji/source/jiji/env/windows/: _windows.hxx  _windows.ixx
